--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   timezone: 0.9.4
   awesome_notifications: ^0.9.3+1
+  flutter_launcher_icons: ^0.11.0
 
 
 
@@ -42,6 +43,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_local_notifications: ^17.2.1+2
+
 
 dev_dependencies:
   flutter_test:
